Addresses second round of PR feedback.